--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio of Eng. Mohammed Ali Abdallah Ahmed – Electrical Automation Engineer specializing in Siemens BMS, HVAC, Smart Buildings & Solar PV Systems." />
+  <meta name="description" content="Professional portfolio of Eng. Mohammed Ali Abdallah Ahmed, Electrical Automation Engineer specializing in BMS, HVAC, Smart Buildings, and Solar PV Systems." />
   <title>Eng. Mohammed Ali Abdallah Ahmed | Automation Engineer</title>
 
   <!-- Fonts & Icons -->
@@ -38,16 +38,16 @@
 <!-- Navbar -->
 <nav class="navbar" aria-label="Main navigation">
   <div class="nav-container">
-    <div class="logo"><i class="fas fa-cogs"></i> M. Ali</div>
+    <div class="logo">M. Ali</div>
     <ul class="nav-links">
-      <li><a href="#home" class="active"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
-      <li><a href="#experience"><i class="fas fa-briefcase"></i> Experience</a></li>
-      <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
-      <li><a href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
-      <li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
-      <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-      <li><a href="cv.pdf" class="btn primary" target="_blank"><i class="fas fa-download"></i> Download CV</a></li>
+      <li><a href="#home" class="active">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="cv.pdf" class="btn primary" target="_blank">Download CV</a></li>
     </ul>
     <div class="hamburger" aria-label="Toggle menu" role="button" tabindex="0">
       <span></span><span></span><span></span>
@@ -59,147 +59,192 @@
 <section id="home" class="hero">
   <div class="hero-content glass">
     <div class="hero-text">
-      <h1 class="animate-slide-up">Eng. Mohammed Ali<br><span class="gradient-text">Abdallah Ahmed</span></h1>
-      <h2 class="animate-slide-up delay-1">Electrical Automation Engineer</h2>
-      <p class="tagline reveal-text animate-slide-up delay-2" data-text="Specializing in Siemens BMS, HVAC DDC, Smart Buildings, and Solar PV Systems. Delivering high-efficiency, future-ready automation solutions for modern infrastructure.">
-        <span class="visible-chars"></span><span class="cursor">|</span>
-      </p>
+      <h1>Eng. Mohammed Ali Abdallah Ahmed</h1>
+      <h2>Electrical Automation Engineer</h2>
+      <p class="tagline">Delivering optimized, compliant automation systems for efficiency and reliability in smart buildings and energy infrastructure.</p>
 
-      <div class="contact-info animate-slide-up delay-3">
-        <p><i class="fas fa-map-marker-alt icon-spin"></i> Olaya, Khobar, Eastern Province, Saudi Arabia</p>
-        <p><i class="fas fa-phone icon-spin"></i> +966 532 586 897</p>
-        <p><i class="fas fa-envelope icon-spin"></i> mohammed.ali280@gmail.com</p>
-        <p><i class="fab fa-linkedin icon-spin"></i> <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">LinkedIn Profile</a></p>
+      <div class="contact-info">
+        <p><i class="fas fa-map-marker-alt"></i> Olaya, Khobar, Eastern Province, Saudi Arabia</p>
+        <p><i class="fas fa-phone"></i> +966 532 586 897</p>
+        <p><i class="fas fa-envelope"></i> mohammed.ali280@gmail.com</p>
+        <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">LinkedIn Profile</a></p>
       </div>
 
-      <div class="buttons animate-slide-up delay-4">
-        <a href="#contact" class="btn primary pulse">Get in Touch</a>
-        <a href="cv.pdf" target="_blank" class="btn outline pulse">Download CV</a>
+      <div class="buttons">
+        <a href="#contact" class="btn primary">Get in Touch</a>
+        <a href="cv.pdf" target="_blank" class="btn outline">Download CV</a>
       </div>
 
-      <div class="availability animate-slide-up delay-5">
-        <i class="fas fa-check-circle icon-spin"></i> Transferable Iqama – Immediate Relocation Available
+      <div class="availability">
+        <i class="fas fa-check-circle"></i> Transferable Iqama – Immediate Relocation Available
       </div>
     </div>
 
-    <div class="hero-image animate-fade-in delay-3">
-      <div class="avatar"><i class="fas fa-robot icon-bounce"></i></div>
+    <div class="hero-image">
+      <div class="avatar"><i class="fas fa-robot"></i></div>
     </div>
   </div>
 </section>
 
 <!-- About -->
-<section id="about" class="section animate-section">
+<section id="about" class="section">
   <div class="glass section-card">
     <h3>Professional Summary</h3>
     <p>
-      Results-driven Electrical Automation Engineer with more than 4 years of specialized experience in <strong>Siemens Building Automation Solutions</strong>, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems. 
-      Expertise in presales engineering, system design, BOQ preparation, accurate cost estimation, and technical documentation. 
-      Proven ability to deliver optimized, SEC-compliant solutions for Saudi Electricity Company and major contractors, consistently achieving up to 15% cost reduction and 95% client satisfaction.
+      Results-driven Electrical Automation Engineer with 4+ years of experience in Siemens Building Automation Solutions, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems. Strong background in presales engineering, system design, BOQ preparation, estimation, and technical documentation. Proven ability to deliver optimized, compliant solutions for Saudi Electricity Company (SEC) and leading contractors, achieving up to 15% cost reduction and 95% client satisfaction.
     </p>
   </div>
 </section>
 
 <!-- Experience -->
-<section id="experience" class="section animate-section">
+<section id="experience" class="section">
   <h3 class="section-title">Professional Experience</h3>
   <div class="timeline">
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Mar 2024 – Present</span>
+    <div class="glass timeline-card">
+      <span class="date">Mar 2024 – Present</span>
       <h4>Controls Engineer – Building Automation Design & Presales</h4>
-      <p class="company">Sela-PASS (Siemens Partner) • Khobar, Saudi Arabia</p>
+      <p class="company">Sela-PASS (Siemens Building Technologies Solution Partner) • Khobar, Saudi Arabia</p>
       <ul>
-        <li>Designed & delivered Siemens DDC panels for SEC substation HVAC/BMS systems</li>
-        <li>Led presales: technical proposals, AutoCAD layouts, BOQs, cost estimation</li>
-        <li>Configured PXC/DXR controllers, SID/HIT tools, IEQ sensors for energy optimization</li>
-        <li>Integrated KNX, BACnet, DALI-2 for smart lighting & automation</li>
-        <li>Achieved 95% customer satisfaction through commissioning & support</li>
+        <li>Designed and delivered Siemens-based DDC panels for SEC substation HVAC and BMS systems</li>
+        <li>Led presales activities, including technical proposals, AutoCAD layouts, BOQs, and cost estimation</li>
+        <li>Configured PXC & DXR controllers, SID/HIT tools, and IEQ sensors to optimize energy efficiency</li>
+        <li>Integrated KNX, BACnet, and DALI-2 systems for smart lighting and building automation</li>
+        <li>Supported commissioning, performance tuning, and post-handover support achieving 95% customer satisfaction</li>
       </ul>
     </div>
 
-    <div class="glass timeline-card animate-slide-left delay-1">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Aug–Dec 2023 (Part-Time)</span>
+    <div class="glass timeline-card">
+      <span class="date">Aug 2023 – Dec 2023 (Part-Time)</span>
       <h4>Solar Engineer – PV Systems</h4>
-      <p class="company">Al-Aggar Renewable Solar Solutions • Sudan</p>
+      <p class="company">Al-Aggar Renewable Solar Solutions • Wad Madani, Sudan</p>
       <ul>
-        <li>Designed & installed 10+ off-grid/hybrid solar PV systems</li>
-        <li>Improved availability & reduced downtime by 10%</li>
-        <li>Prepared IEC-compliant designs, proposals & cost estimates</li>
+        <li>Designed and installed 10+ off-grid and hybrid solar PV systems powering rural homes and water stations</li>
+        <li>Improved system availability and reduced downtime by 10% through performance optimization</li>
+        <li>Prepared technical proposals, cost estimates, and IEC-compliant designs</li>
+        <li>Conducted site surveys and coordinated installations with field teams</li>
       </ul>
     </div>
 
-    <div class="glass timeline-card animate-slide-left delay-2">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Sep 2022 – Dec 2023</span>
+    <div class="glass timeline-card">
+      <span class="date">Sep 2022 – Dec 2023</span>
       <h4>Automation Engineer</h4>
-      <p class="company">DAL Group – Agricultural Services • Sudan</p>
+      <p class="company">DAL Group – DAL Agricultural Services Company • Khartoum, Sudan</p>
       <ul>
-        <li>Maintained automated production lines – reduced downtime by 15%</li>
-        <li>Supported PLC, HMI, MCC & instrumentation systems</li>
-        <li>Implemented predictive maintenance & root-cause analysis</li>
+        <li>Maintained Hunter Wood Technologies automated production lines, reducing downtime by 15%</li>
+        <li>Supported PLC, HMI, MCC, and instrumentation systems</li>
+        <li>Implemented predictive maintenance, sensor calibration, and root-cause analysis to improve OEE</li>
       </ul>
     </div>
 
-    <div class="glass timeline-card animate-slide-left delay-3">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Apr–Aug 2022</span>
+    <div class="glass timeline-card">
+      <span class="date">Apr 2022 – Aug 2022</span>
       <h4>Product Support Engineer</h4>
-      <p class="company">Afroscot Services Co. Ltd • Sudan</p>
+      <p class="company">Afroscot Services Co. Ltd • Khartoum, Sudan</p>
       <ul>
-        <li>Commissioned diesel & hybrid solar systems for 15+ telecom sites</li>
-        <li>Rehabilitated legacy systems to 76% capacity</li>
-        <li>Resolved 90% of issues within 24 hours</li>
+        <li>Commissioned diesel generators and hybrid solar systems for 15+ telecom sites</li>
+        <li>Rehabilitated legacy systems to 76% operational capacity</li>
+        <li>Resolved 90% of field issues within 24 hours</li>
+      </ul>
+    </div>
+
+    <div class="glass timeline-card">
+      <span class="date">Oct 2021 – Feb 2022</span>
+      <h4>Instrumentation Site Engineer</h4>
+      <p class="company">University of Khartoum Consultancy Corporation (UKCC) • Khartoum, Sudan</p>
+      <ul>
+        <li>Supported Fixed Asset Management System at Khartoum Refinery</li>
+        <li>Conducted instrumentation audits, improving asset data accuracy by 20%</li>
+        <li>Developed standardized reporting templates for asset tracking and analysis</li>
       </ul>
     </div>
   </div>
 </section>
 
 <!-- Projects -->
-<section id="projects" class="section animate-section">
+<section id="projects" class="section">
   <h3 class="section-title">Key Projects</h3>
   <div class="grid-3">
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-bolt icon-spin"></i>
-      <h4>SEC Substations</h4>
-      <p>HVAC & BMS DDC Panels – Design, Manufacturing, Testing & Commissioning</p>
+    <div class="glass card">
+      <h4>SEC Substations – HVAC & BMS DDC Panels</h4>
+      <p>System Type: DDC Control Panels</p>
+      <p>Environment: Utility Substations</p>
+      <p>Responsibility: Design, Manufacturing, Testing & Commissioning</p>
     </div>
-    <div class="glass card animate-zoom-in delay-1">
-      <i class="fas fa-hospital icon-spin"></i>
-      <h4>King Faisal Specialist Hospital</h4>
-      <p>BMS Testing & Commissioning – Medina</p>
+    <div class="glass card">
+      <h4>King Faisal Specialist Hospital, Medina – BMS Testing & Commissioning</h4>
+      <p>System Type: Building Management System</p>
+      <p>Environment: Healthcare Facility</p>
+      <p>Responsibility: Testing, Commissioning, Performance Tuning</p>
     </div>
-    <div class="glass card animate-zoom-in delay-2">
-      <i class="fas fa-sun icon-spin"></i>
-      <h4>Off-Grid Solar Systems</h4>
-      <p>11+ hybrid installations for rural infrastructure</p>
+    <div class="glass card">
+      <h4>Off-Grid Solar – 11+ Hybrid Systems</h4>
+      <p>System Type: Hybrid Solar PV</p>
+      <p>Environment: Rural Infrastructure</p>
+      <p>Responsibility: Design, Installation, Optimization</p>
     </div>
   </div>
 </section>
 
 <!-- Skills -->
-<section id="skills" class="section animate-section">
+<section id="skills" class="section">
   <h3 class="section-title">Technical Skills</h3>
   <div class="skills-grid">
-    <div class="glass skill-item animate-zoom-in">
-      <div class="skill-meter" style="--progress: 95;"><span>Siemens Desigo CC</span></div>
+    <div class="glass card">
+      <h4>BMS & Automation</h4>
+      <p>Siemens Desigo CC, PXC, DXR, SID, HIT</p>
+      <p>KNX, BACnet, DALI-2, LoRaWAN, IoT</p>
+      <p>PLC, HMI, SCADA</p>
     </div>
-    <div class="glass skill-item animate-zoom-in delay-1">
-      <div class="skill-meter" style="--progress: 90;"><span>DDC & HVAC Control</span></div>
+    <div class="glass card">
+      <h4>HVAC & Control</h4>
+      <p>DDC & MCC Panel Design</p>
+      <p>Sensors, IEQ, VFD, PID</p>
     </div>
-    <div class="glass skill-item animate-zoom-in delay-2">
-      <div class="skill-meter" style="--progress: 85;"><span>Solar PV & BESS</span></div>
+    <div class="glass card">
+      <h4>Solar & Energy</h4>
+      <p>Off-grid & Hybrid PV Systems</p>
+      <p>Battery Energy Storage (BESS)</p>
+      <p>Testing, Commissioning, Load Analysis</p>
     </div>
-    <div class="glass skill-item animate-zoom-in delay-3">
-      <div class="skill-meter" style="--progress: 92;"><span>AutoCAD & MATLAB</span></div>
+    <div class="glass card">
+      <h4>Software & Tools</h4>
+      <p>AutoCAD</p>
+      <p>MATLAB/Simulink</p>
+      <p>PVSyst</p>
+      <p>Microsoft Excel (Advanced)</p>
+      <p>BOQs & Cost Estimation</p>
+      <p>Technical Proposals</p>
     </div>
   </div>
 </section>
 
-<!-- Footer -->
-<footer id="contact" class="footer glass">
-  <div class="footer-content">
-    <p><strong>Languages:</strong> Arabic (Native) • English (Full Professional)</p>
-    <p><strong>Volunteer:</strong> Social Media Director – Insan Khair Initiative</p>
-    <p>mohammed.ali280@gmail.com | +966 532 586 897</p>
-    <p>© 2026 Eng. Mohammed Ali Abdallah Ahmed</p>
+<!-- Education -->
+<section id="education" class="section">
+  <h3 class="section-title">Education & Certifications</h3>
+  <div class="glass section-card">
+    <h4>B.Sc. Electrical & Electronics Engineering</h4>
+    <p>University of Khartoum – Sudan | Oct 2020</p>
+    <p>Graduation Project: Extension of Photovoltaic Power Generation – Al-Fashir Power Plant (Modeled with PVSyst & MATLAB/Simulink)</p>
+
+    <h4>Certifications & Training</h4>
+    <ul>
+      <li>Siemens Intelligent Smart Building Solutions (KNX, BACnet, IoT, DALI-2) – 2025</li>
+      <li>Siemens Presales Training – Desigo PXC/DXR – Jan 2025</li>
+      <li>Solar PV Design & Installation – edX (Dr. Olindo Isabella)</li>
+      <li>Advanced Industrial Automation – PLC, SCADA, VFD</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Contact -->
+<footer id="contact" class="footer">
+  <div class="glass footer-content">
+    <h3 class="section-title">Contact</h3>
+    <p><i class="fas fa-envelope"></i> mohammed.ali280@gmail.com</p>
+    <p><i class="fas fa-phone"></i> +966 532 586 897</p>
+    <p><i class="fas fa-map-marker-alt"></i> Olaya, Khobar, Saudi Arabia</p>
+    <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">LinkedIn</a></p>
+    <p>© 2026 Eng. Mohammed Ali Abdallah Ahmed. All rights reserved.</p>
   </div>
 </footer>
 
